# music-generator

./: .devcontainer.json  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  4  Dockerfile  LICENSE  NOTICE  README.md  TODO.txt  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json  requirements.txt
.docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
.dvc/tmp/: lock
.github/workflows/: lint.yml  project-diagrams.yml
docs/: CONFIG_CHANGELOG.txt  data-directory-structure.txt  data_directory_structure.txt  program-flow.md  project-structure.md  setup-guide.md  source_directory_structure.txt  src-directory-structure.txt  usage-guide.md
local_data/configs/: config.json  config_final.json
notebooks/: 01_raw_dataset_exploration.jpynb.ipynb  04_custom_model.py
notebooks/.ipynb_checkpoints/: 01_raw_dataset_exploration.jpynb-checkpoint.ipynb
scripts/: cleanup.sh  init.sh  install_on_fedora.sh  python_venv.sh  run-compiled.sh  run-container.sh  setup.sh
src/: data
src/groove_panda/: __init__.py  cli.py  config.py  controller.py  data_managment.py  directories.py  logging_config.py  main.py  utils.py
src/groove_panda/analysis/: raw_dataset.py
src/groove_panda/generation/: generate.py  generate_music.py
src/groove_panda/midi/: parser.py  sheet_music_generator.py  writer.py
src/groove_panda/models/: flexible_sequence_generator.py  lazy_sequence_generator.py  model_io.py  model_training.py  models.py  plot.py  train.py  utils.py
src/groove_panda/models/tf_custom/: callbacks.py  feature_losses.py  losses.py  math_utils.py  regularizers.py
src/groove_panda/models/tf_utils/: embedding_dim_callback.py  tf_utils.py
src/groove_panda/processing/: parallel_processing.py  process.py  processed_io.py
src/groove_panda/processing/tokenization/: midi_file_utils.py  token_map_io.py  tokenizer.py
src/music_generation_lstm/: __init__.py  cli.py  config.py  controller.py  data_managment.py  logging_config.py  main.py  pipelines.py  step.py  strategies.py  test.py
src/music_generation_lstm/data_management/: load.py  save.py  utils.py
src/music_generation_lstm/generation/: generate.py  genrerate.py
src/music_generation_lstm/managers/: dataset_management.py  model_management.py
src/music_generation_lstm/midi/: features.py  parser.py  writer.py
src/music_generation_lstm/models/: lazy_sequence_generator.py  lstm_model.py  midi_sequencing.py  model_io.py  models.py  plot.py  train.py  training_callback.py
src/music_generation_lstm/processing/: encoder.py  parallel_processing.py  process.py  processed_io.py  utils.py
src/music_generation_lstm/processing/tokenization/: token_map_io.py  tokenizer.py  tokens.py
src/music_generation_lstm/sheet_music_generator/: sheet_music_generator.py
src/music_generation_lstm/tokenization/: token_map_io.py  tokenizer.py
src/test/: jo.py  losses.py  main.py  not_mido.py  sixtuple_implementation.py  test_mido_tokenizer.py  test_token_maps.py  test_tokenizer.py  tokenizer.py
