[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-generator"
version = "0.1.0"
description = "Generates music with ML using LSTM"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name="Jan", email="uutbr@student.kit.edu" }]
license = { text="MIT" }
keywords = ["tensorflow", "music21", "matplotlib", "AI", "ML", "LSTM"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "music21>=9.7",
  "prompt-toolkit>=3.0"
]


[project.optional-dependencies]
nogpu =  ["tensorflow_cpu>=2.19"]
gpu = ["tensorflow>=2.19"]


[project.scripts]
music-gen = "music_generation_lstm.main:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 120
